crates/cli/tests/snapshots/query_test__hash__prints_the_manifest.snap
---
source: crates/cli/tests/query_test.rs
expression: assert.output()
---
Hash: a

{
    "command": "base",
    "args": [
        "a",
        "b",
        "c"
    ]
}


