crates/cli/tests/snapshots/query_test__hash__prints_the_manifest_in_json.snap
---
source: crates/cli/tests/query_test.rs
expression: assert.output()
---
{
    "command": "base",
    "args": [
        "a",
        "b",
        "c"
    ]
}


